--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -4,6 +4,7 @@
     <h3><%= @quote.author %></h3>
     <p><%= @quote.body %></p>
     <div class"links">
+        <%= link_to "Edit", edit_quote_path(@quote) %>
         <%= link_to "Back", root_path %>
     </div>
 </div>
