--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,15 +1,18 @@
 <h1>Homepage</h1>
 <%= link_to "New Quote", new_quote_path %>
 
-<% @quotes.each do |quote| %>
-    <div>
-        <h3><%= quote.author %></h3>
-        <p><%= quote.body %></p>
-        <p><%= time_ago_in_words quote.created_at %> ago</p>
-        <div class"links">
-            <%= link_to "View", quote_path(quote) %>
+<div class="wrapper_wide">
+    <% @quotes.each do |quote| %>
+        <div>
+            <h3><%= quote.author %></h3>
+            <p><%= quote.body %></p>
+            <p><%= time_ago_in_words quote.created_at %> ago</p>
+            <div class"links">
+                <%= link_to "View", quote_path(quote) %>
+            </div>
         </div>
-    </div>
-<% end %>
+    <% end %>
+</div>
+
 
 <p>This better be working</p>
