--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,4 +27,32 @@ $light: #EDEFF5;
 	clear: both;
 }
 
+#main_header {
+	color: $dark;
+	background: $white;
+	padding: 2.5rem 0;
+	#logo {
+		float: left;
+		text-transform: uppercase;
+		font-weight: 700;
+		color: $dark;
+		text-decoration: none;
+	}
+	nav {
+		float: right;
+		ul {
+			list-style: none;
+			margin: 0;
+			li {
+				display: inline;
+				margin-left: 2.5rem;
+				a {
+					color: $dark;
+					text-decoration: none;
+				}
+			}
+		}
+	}
+}
+
 @import 'normalize';
