Added font family

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,10 @@ $highlight: #d2674e;
 $dark: #22292e;
 $light: #EDEFF5;
 
+body {
+	font-family: 'Open Sans', sans-serif;	
+}
+
 .wrapper_wide {
     width: 90%;
     margin: 0 auto;
