--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,6 +57,9 @@ body {
 				text-decoration: none;
 				color: $dark;
 				font-weight: 500;
+				&:hover {
+					color: $highlight;
+				}
 			}
 		}
 	}
