--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,12 +1,18 @@
-<div class="wrapper_wide">
+<div id="banner">
+    <!-- Will be used to test quote of the day -->
+</div>
+
+<div class="wrapper cf">
     <% @quotes.each do |quote| %>
-        <div>
-            <h3><%= quote.author %></h3>
-            <p><%= quote.body %></p>
-            <p><%= time_ago_in_words quote.created_at %> ago</p>
-            <div class"links">
-                <%= link_to "View", quote_path(quote) %>
+        <%= link_to quote do %>
+            <div class="quote_object">
+                <p class="quote_body"><%= quote.body %></p>
+                <div class="divider"></div><!-- divides body and author -->
+                <h4 class="quote_author"><%= quote.author %></h4>
+                <!--<div class"links">-->
+                <!--    <%= link_to "View", quote_path(quote) %>-->
+                <!--</div>-->
             </div>
-        </div>
+        <% end %>
     <% end %>
 </div>
