--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -13,7 +13,7 @@ body {
     width: 25%;
     display: inline-block;
     text-align: center;
-    color: $dark;
+    //color: $dark;
     background-color: lighten($highlight, 10%);
     .quote_body {
         font-size: 1.5rem;
@@ -32,6 +32,7 @@ body {
     }
     a {
         text-decoration: none;
+        color: $dark;
     }
     &:hover {
         background: $highlight;
