--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -9,9 +9,48 @@
                 <p class="quote_body"><%= quote.body %></p>
                 <div class="divider"></div><!-- divides body and author -->
                 <h4 class="quote_author"><%= quote.author %></h4>
-                <!--<div class"links">-->
-                <!--    <%= link_to "View", quote_path(quote) %>-->
-                <!--</div>-->
+                
+                <div class="vote_links">
+                    <% if user_signed_in? %>
+                        <% if current_user.liked? quote %>
+                            <%= link_to like_quote_path(quote), method: :put, class: "button_vote voted_up" do %>
+                                <i class="fa fa-thumbs-up"></i>
+                                <%= quote.get_upvotes.size %>
+                            <% end %>
+                            <%= link_to dislike_quote_path(quote), method: :put, class: "button_vote button_vote_down" do %>
+                                <i class="fa fa-thumbs-down"></i>
+                                <%= quote.get_downvotes.size %>
+                            <% end %>
+                        <% elsif current_user.disliked? quote %>
+                            <%= link_to like_quote_path(quote), method: :put, class: "button_vote button_vote_up" do %>
+                                <i class="fa fa-thumbs-up"></i>
+                                <%= quote.get_upvotes.size %>
+                            <% end %>
+                            <%= link_to dislike_quote_path(quote), method: :put, class: "button_vote voted_down" do %>
+                                <i class="fa fa-thumbs-down"></i>
+                                <%= quote.get_downvotes.size %>
+                            <% end %>
+                        <% else %>
+                            <%= link_to like_quote_path(quote), method: :put, class: "button_vote button_vote_up" do %>
+                                <i class="fa fa-thumbs-up"></i>
+                                <%= quote.get_upvotes.size %>
+                            <% end %>
+                            <%= link_to dislike_quote_path(quote), method: :put, class: "button_vote button_vote_down" do %>
+                                <i class="fa fa-thumbs-down"></i>
+                                <%= quote.get_downvotes.size %>
+                            <% end %>
+                        <% end %>
+                    <% else %>
+                        <%= link_to like_quote_path(quote), method: :put, class: "button_vote button_vote_up" do %>
+                            <i class="fa fa-thumbs-up"></i>
+                            <%= quote.get_upvotes.size %>
+                        <% end %>
+                            <%= link_to dislike_quote_path(quote), method: :put, class: "button_vote button_vote_down" do %>
+                            <i class="fa fa-thumbs-down"></i>
+                            <%= quote.get_downvotes.size %>
+                        <% end %>
+                    <% end %>
+                </div>
             </div>
         <% end %>
     <% end %>
