--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -1,5 +1,5 @@
 body {
-    background: $grey;
+    background: $white;
 }
 
 #banner {
@@ -7,14 +7,19 @@ body {
 }
 
 .quote_object {
+    position: relative;
     border-radius: 0.5rem;
     margin: 1rem;
     padding: 2rem;
     width: 25%;
     display: inline-block;
     text-align: center;
-    //color: $dark;
     background-color: lighten($highlight, 10%);
+    .quote_nav {
+        position: absolute;
+        top: 1rem;
+        right: 2rem;
+    }
     .quote_body {
         font-size: 1.5rem;
         font-weight: 600;
@@ -37,5 +42,17 @@ body {
     &:hover {
         background: $highlight;
         cursor: pointer;
+    }
+}
+
+#context {
+    float: right;
+    width: 65%;
+    margin-top: 1rem;
+    overflow: auto;
+    border: 0.25rem solid $dark;
+    background: $white;
+    .text_space {
+        padding: 2rem 2rem;
     }
 }
