Styled show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,6 +5,7 @@ $red: #FF0000;
 $highlight: #d2674e;
 $dark: #22292e;
 $light: #EDEFF5;
+$semi_transparent: rgba(0,0,0,0.25);
 
 body {
 	font-family: 'Open Sans', sans-serif;
