--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -1,10 +1,34 @@
-<div class="wrapper">
+<div class="banner">
     <div class="quote_object">
         <div class="quote_nav">
-            <%= link_to edit_quote_path(@quote) do %>
-                <i class="fa fa-pencil-square-o"></i>
-                Edit
+            <div class="share_links">
+                <% unless current_user.twitter.blank? %>
+                    <div class="share_container">
+                        <i class="fa fa-twitter"></i>
+                    </div>
+                <% end %>    
+                <% unless current_user.facebook.blank? %>
+                    <div class="share_container">
+                        <i class="fa fa-facebook"></i>
+                    </div>
+                <% end %>  
+                <% unless current_user.instagram.blank? %>
+                    <div class="share_container">
+                        <i class="fa fa-instagram"></i>
+                    </div>
+                <% end %>  
+                <% unless current_user.pinterest.blank? %>
+                    <div class="share_container">
+                        <i class="fa fa-pinterest-p"></i>
+                    </div>
+                <% end %>  
+            </div>
+            <div class="utility_links">
+                <%= link_to edit_quote_path(@quote) do %>
+                    <i class="fa fa-pencil-square-o"></i>
+                    Edit
             <% end %>
+            </div>
         </div>
         <p class="quote_body"><%= @quote.body %></p>
         <div class="divider"></div><!-- divides body and author -->
@@ -19,12 +43,15 @@
                 <%= @quote.get_downvotes.size %>
             <% end %>
         </div>
-    </div>
-    
-    <div id="context" class="cf">
-        <div class="text_space">
-            <p>This is where the context will be.</p>
+        <div id="credit">
+            <p>Submitted By: <%= "#{@quote.user.firstName} #{@quote.user.lastName}" %></p>
         </div>
+    </div>
+</div>
+
+<div class="wrapper_skinny">
+    <div class="context">
+        <p>This is where the context will be</p>
     </div>
 </div>
 
