Added Markdown support for the Context

--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -4,8 +4,13 @@
     <br>
     <br>
     
-    <%= f.label :quote %><br>
+    <%= f.label :body, "Quote" %><br>
     <%= f.text_area :body %>
+    <br>
+    <br>
+    
+    <%= f.label :context, "Context" %><br>
+    <%= f.text_area :context %>
     <br>
     <br>
     
