--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -53,7 +53,7 @@
 
 <div class="wrapper_skinny">
     <div class="context">
-        <p>This is where the context will be</p>
+        <p><%= markdown(@quote.context) %></p>
     </div>
 </div>
 
