--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -52,8 +52,20 @@
 </div>
 
 <div class="wrapper_skinny">
-    <div class="context">
-        <p><%= markdown(@quote.context) %></p>
-    </div>
+    <% if @context.nil? %>
+        <div class="alert-alert-info">
+            <p>We know nothing about this quote. Please help the community if you do:</p>
+            <%= link_to "Add Context", new_quote_context_path(@quote), class: "btn btn-success" %>
+        </div>
+    <% else %>
+        <div class="context">
+            <nav>
+                <ul>
+                    <li><%= link_to "Edit Context", edit_quote_context_path(@quote, @context) %></li>
+                </ul>
+            </nav>
+            <p><%= markdown(@context.body) %></p>
+        </div>
+    <% end %>
 </div>
 
