--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,17 @@
-<header id="main_header" class="cf">
-    <div class="wrapper_wide">
-        <%= link_to "Quotext", root_path, id: "logo" %>
-        <nav>
-            <ul>
-                <% if user_signed_in? %>
-                    <li><%= link_to "Add Quote", new_quote_path %></li>
-                    <li><%= link_to "Account Settings", edit_user_registration_path %></li>
-                    <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-                <% else %>
-                    <li><%= link_to "Explore", root_path %></li>
-                    <li><%= link_to "Sign In", new_user_session_path %></li>
-                <% end %>
-            </ul>
-        </nav>
-    </div>
-</header>
+<!--<header id="main_header" class="cf">-->
+<!--    <div class="wrapper_wide">-->
+<!--        <%= link_to "Quotext", root_path, id: "logo" %>-->
+<!--        <nav>-->
+<!--            <ul>-->
+<!--                <% if user_signed_in? %>-->
+<!--                    <li><%= link_to "Add Quote", new_quote_path %></li>-->
+<!--                    <li><%= link_to "Account Settings", edit_user_registration_path %></li>-->
+<!--                    <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>-->
+<!--                <% else %>-->
+<!--                    <li><%= link_to "Explore", root_path %></li>-->
+<!--                    <li><%= link_to "Sign In", new_user_session_path %></li>-->
+<!--                <% end %>-->
+<!--            </ul>-->
+<!--        </nav>-->
+<!--    </div>-->
+<!--</header>-->
