--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,23 @@
-<!--<header id="main_header" class="cf">-->
-<!--    <div class="wrapper_wide">-->
-<!--        <%= link_to "Quotext", root_path, id: "logo" %>-->
-<!--        <nav>-->
-<!--            <ul>-->
-<!--                <% if user_signed_in? %>-->
-<!--                    <li><%= link_to "Add Quote", new_quote_path %></li>-->
-<!--                    <li><%= link_to "Account Settings", edit_user_registration_path %></li>-->
-<!--                    <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>-->
-<!--                <% else %>-->
-<!--                    <li><%= link_to "Explore", root_path %></li>-->
-<!--                    <li><%= link_to "Sign In", new_user_session_path %></li>-->
-<!--                <% end %>-->
-<!--            </ul>-->
-<!--        </nav>-->
-<!--    </div>-->
-<!--</header>-->
+<nav class="navbar navbar-default main-header">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <div id="logo"><%= link_to "Quotext", root_path %></div>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"><i class="fa fa-bars"></i></button>
+    </div>
+    <div class="navbar-right">
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav">
+            <% if user_signed_in? %>
+              <p class="navbar-text"><%= link_to "#{current_user.first_name} #{current_user.last_name}", edit_user_registration_path %></p>
+              <li><%= link_to "Add Quote", new_quote_path %></li>
+              <li><%= link_to "Account Settings", edit_user_registration_path %></li>
+              <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Explore", root_path %></li>
+              <li><%= link_to "Sign In", new_user_session_path %></li>
+            <% end %>
+        </ul>
+      </div>
+     </div>
+  </div>
+</nav>
