--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -42,7 +42,7 @@
                         </div>
                     </nav>
                 <% end %>
-                <p><%= markdown(@context.body) %></p>
+                <%= markdown(@context.body) %>
             </div>
         <% end %>
     </div>
