--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -80,4 +80,13 @@ body {
             margin: 0 auto;
         }
     }
+    // Styles for markdown elements
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 100%;
+        height: auto;
+        width: auto;
+    }
 }
